# genepred

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
assets/: EXAMPLES.md
genepred/: Cargo.toml
genepred/src/: bed.rs  genepred.rs  gxf.rs  lib.rs  reader.rs  strand.rs  writer.rs
genepred/src/cli/: cds.rs  exons.rs  feature.rs  fiveutr.rs  introns.rs  lint.rs  mod.rs  threeutr.rs  utr.rs
genepred/tests/: feature_cli.rs  lint_cli.rs  reader.rs  struct.rs  writer.rs
genepred/tests/data/: bed12.bed  bed12_extra.bed  bed3.bed  bed6.bed  codons.gtf  gtf_missing_parent.gtf  gtf_negative_stop_codon.gtf  gtf_single_base.gtf  simple.gff  simple.gtf
