[package]
name = "genepred"
version = "0.0.2"
edition = "2021"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
description = "A simple port for the GenePred format in Rust"
keywords = ["genepred", "bioinformatics", "transcript", "bed"]
readme = "../README.md"
homepage = "https://github.com/alejandrogzi/genepred"
repository = "https://github.com/alejandrogzi/genepred"
categories = ["data-structures", "science"]

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
mmap = ["dep:memmap2"]
compression = ["dep:flate2"]

[dependencies]
rayon = { version = "1.10", optional = true }
memmap2 = { version = "0.9", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }

[profile.release]
lto = true
opt-level = 3

[[test]]
name = "reader"
path = "tests/reader.rs"
test = true
bench = false

[[test]]
name = "struct"
path = "tests/struct.rs"
test = true
bench = false
